k8s-tasks/my-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.14.2
          volumeMounts:
          - name: data-volume
            mountPath: /data
          resources:
            limits:
             cpu: "1"
             memory: 128Mi
            requests:
             cpu: "0.5"
             memory: 128Mi
          ports:
            - containerPort: 80

      volumes:
      - name: data-volume
        persistentVolumeClaim:
           claimName: my-pvc
