k8s-tasks/my-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: nginx-container
      image: nginx:1.14.2
      resources:
            limits:
             cpu: "1"
             memory: 128Mi
            requests:
             cpu: "0.5"
             memory: 128Mi
      restartPolicy: Always
