k8s-tasks/my-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-lb
spec:
  selector:
    app: nginx  # Match the labels of your deployment pods
  ports:
    - protocol: TCP
      port: 80
  type: LoadBalancer
